<resources>
    <string name="app_name">ClientServer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterName">Name:</string>
    <string name="nameHint">Example: John Doe</string>
    <string name="enterDob">Date of Birth:</string>
    <string name="etIpHint">Enter Server\'s IP address</string>
    <string name="bConnect">Connect to Server</string>
    <string name="bServer">Server</string>
    <string name="bClient">Client</string>
    <string name="optionMessage">Select to be Client or Server :</string>
    <string name="connectInfo">Connected to Server</string>
</resources>
